셀 클릭 구현

--- a/po_orderview/webapp/view/main.view.xml
+++ b/po_orderview/webapp/view/main.view.xml
@@ -112,7 +112,7 @@
                     <ColumnListItem>
                         <cells>
                             <Text text="{PoNum}" />
-                            <Text text="{VenCod}" />
+                            <Link text="{VenCod}" press="onVendorCodePress" />
                             <Text text="{PtCod}" />
                             <Text text="{MtCod}" />
                             <Text text="{Mtmany}" />
