--- a/po_orderview/webapp/view/QuickViewCard.fragment.xml
+++ b/po_orderview/webapp/view/QuickViewCard.fragment.xml
@@ -1,31 +1,34 @@
 <core:FragmentDefinition xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:f="sap.f" xmlns:card="sap.f.cards">
     <Dialog
         id="detailDialog"
-        title="상세 정보"
+        title="{vendor>/Venname} 상세"
         draggable="true"
         resizable="true"
-        contentWidth="700px"
-        contentHeight="700px"
+        contentWidth="380px"
+        contentHeight="auto"
     >
         <f:Card class="sapUiMediumMargin" width="300px">
             <f:header>
-                <card:Header title="{Venname}" subtitle="{Venaddr}" />
+                <card:Header title="{vendor>/Venname}" subtitle="{vendor>/Venphone}" />
             </f:header>
             <f:content>
                 <List class="sapUiSmallMarginBottom" showSeparators="None">
                     <CustomListItem>
                         <HBox alignItems="Center" justifyContent="SpaceBetween">
                             <VBox class="sapUiSmallMarginBegin sapUiSmallMarginTopBottom">
-                                <Title level="H3" text="Vendor Code: {VenCod}" />
-                                <Text text="Vendor ID: {Venid}" />
-                                <Text text="Vendor Name: {Venname}" />
-                                <Text text="Vendor Address: {Venaddr}" />
+                                <Title level="H3" text="기타 정보" />
+                                <Text text="Vendor ID: {vendor>/Venid}" />
+                                <Text text="{= 'Vendor Name: ' + ${vendor>/Venname}}" />
+                                <Text text="{= 'Vendor Address: ' + ${vendor>/Venaddr}}" />
+                                <Text text="{= 'Account Number: ' + ${vendor>/AcountNum}}" />
                             </VBox>
                         </HBox>
                     </CustomListItem>
                 </List>
             </f:content>
         </f:Card>
-        <Button text="나가기" press="backToTheList" />
+        <endButton>
+            <Button text="닫기" press="backToTheList" />
+        </endButton>
     </Dialog>
 </core:FragmentDefinition>
